--- a/templates/plist.html
+++ b/templates/plist.html
@@ -13,7 +13,7 @@
 <style>
 .avatar {transition: 0.8s;width:64px;height:64px;object-fit: cover;}
 .avatar:hover{transform: scale(1.15) rotate(360deg);}
-#header h1 a{color:inherit;text-decoration:none;vertical-align: bottom;font-size:40px;font-family:Monaco;margin-left:8px;}
+#header h1 a{color:inherit;text-decoration:none;vertical-align: bottom;font-size: xx-large;font-family:Monaco;margin-left:8px;}
 .title-right{display:flex;margin:auto 0 0 auto;}
 .title-right button{margin-right:8px;padding:16px;}
 .title-right .circle{padding: 14px 16px;}
@@ -29,8 +29,7 @@
 @media (max-width: 600px) {
     body {padding: 8px;}
     .avatar {width:40px;height:40px;}
-    .blogTitle{display:none;}
-    #buttonRSS{display:none;}
+    #header h1 a{color:inherit;text-decoration:none;vertical-align: bottom;font-size: large;font-family:Monaco;margin-left:8px;}
     .LabelTime{display:none;}
 }
 </style>
@@ -40,11 +39,7 @@
 {% block header %}
 <h1>
     <img src="{{ blogBase['avatarUrl'] }}" class="avatar circle" id="avatarImg" alt="avatar">
-    {%- if blogBase['displayTitle']=='eekdai' -%}
-    <a class="blogTitle" href="https://meekdai.com">{{ blogBase['displayTitle'] }}</a>
-    {% else -%}
-    <a class="blogTitle">{{ blogBase['displayTitle'] }}</a>
-    {%- endif -%}
+    <a class="blogTitle" href={{ blogBase['homeUrl'] }}>{{ blogBase['displayTitle'] }}</a>
 </h1>
 <div class="title-right">
     <a href="{{ blogBase['homeUrl'] }}/tag.html" id="buttonSearch" class="btn btn-invisible circle" title="{{ i18n['Search'] }}">
